Create Add New Student UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-
-<h1>Angular Material</h1>
+<h1 class="text-center py-2">Student Management System</h1>
+<header class="flex gap-2 pt-2 justify-center">
+  <button routerLink="" mat-button>Home</button>
+  <button routerLink="add" mat-button>Add New Student</button>
+  <button routerLink="search" mat-button>Search Students</button>
+</header>
+<hr class="mt-1">
+<router-outlet></router-outlet>
